cqrs implementation improved